--- a/mes-plugins/mes-plugins-master-orders/src/main/resources/masterOrders/view/masterOrderDetails.xml
+++ b/mes-plugins/mes-plugins-master-orders/src/main/resources/masterOrders/view/masterOrderDetails.xml
@@ -237,6 +237,7 @@
                                            field="#{form}.masterOrderQuantity" reference="masterOrderQuantity"
                                            defaultVisible="false">
                                     <option type="alignment" value="right"/>
+                                    <option type="labelWidth" value="45"/>
                                 </component>
                             </layoutElement>
                             <layoutElement column="4" row="1">
@@ -251,6 +252,7 @@
                                            field="#{form}.cumulatedOrderQuantity" reference="cumulatedOrderQuantity"
                                            defaultVisible="false" defaultEnabled="never">
                                     <option type="alignment" value="right"/>
+                                    <option type="labelWidth" value="45"/>
                                 </component>
                             </layoutElement>
                             <layoutElement column="4" row="2">
@@ -265,6 +267,7 @@
                                            field="leftToRelease" reference="leftToRelease"
                                            defaultEnabled="never">
                                     <option type="alignment" value="right"/>
+                                    <option type="labelWidth" value="45"/>
                                 </component>
                             </layoutElement>
                             <layoutElement column="4" row="3">
@@ -278,6 +281,7 @@
                                            field="#{form}.producedOrderQuantity" reference="producedOrderQuantity"
                                            defaultVisible="false" defaultEnabled="never">
                                     <option type="alignment" value="right"/>
+                                    <option type="labelWidth" value="45"/>
                                 </component>
                             </layoutElement>
                             <layoutElement column="4" row="4">
